Bump the target API to 32 (Android 12L). https://redmine.stoutner.com/issues/828